tests/type_errors/if2.pylambda
input x;
if true {
    if x {
        print 0;
    }
}
print 1;